# discrete-optimization

./: .gitignore  README.md  check-all.sh  run-all.sh  run.sh
1-set-cover/: Makefile  report.md
1-set-cover/results/: _scored_sc_10000_5  _scored_sc_1000_11  _scored_sc_5000_1
1-set-cover/results_basic_linprog/: _scored_sc_1000_11  verdict.txt
1-set-cover/results_greedy/: _scored_sc_10000_5  _scored_sc_1000_11  verdict.txt
1-set-cover/results_greedy_linprog/: _scored_sc_10000_5  _scored_sc_157_0
1-set-cover/src/: CMakeLists.txt  checker.py
1-set-cover/src/linprog/: basic.py  filtering.py
2-knapsack/: README.md  run-all.sh  run.sh
2-knapsack/results/: ks_10000_0  ks_200_0
2-knapsack/results-beam/: ks_10000_0  ks_50_0
2-knapsack/results-branching/: ks_200_0  ks_30_0  ks_400_0
2-knapsack/results-greedy/: ks_200_0  report.txt
2-knapsack/results-greedy-random/: ks_1000_0  ks_400_0  report.txt
2-knapsack/src/: branching.hpp  checker.py  dp.hpp  knapsack.hpp  (+1 more)
3-coloring/: CMakeLists.txt  README.md  install.sh  report.md  run-all.sh  run.sh  verdict.txt
4-tsp/: README.md  run.sh  verdict.txt
checker_common/: check.py
coloring/: run-all.sh
knapsack/: report.md  run-all.sh
scripts_common/: check.py
set-cover/: Makefile  data.txt  report.md  report.txt
tasks/1-set-cover/: CMakeLists.txt  Makefile  README.md  verdict.txt
tasks/1-set-cover/results/: sc_10000_2  verdict.txt
tasks/1-set-cover/results_basic_linprog/: sc_5000_1  verdict.txt
tasks/1-set-cover/results_beam/: verdict.txt
tasks/1-set-cover/results_greedy/: sc_10000_2  verdict.txt
tasks/1-set-cover/results_greedy_linprog/: sc_330_0  verdict.txt
tasks/1-set-cover/src/: checker.py  main.cpp
tasks/3-coloring/: CMakeLists.txt  README.md  run.sh  verdict.txt
tasks/3-coloring/results/: gc_1000_5  gc_250_9  gc_500_1  gc_50_3  verdict.txt
tasks/3-coloring/src/: branching.hpp  checker.py  coloring.hpp  genetics.hpp  solve.cpp  tabu.hpp
util/: call_python.hpp  points.hpp  stopwatch.hpp  vector_io.hpp
(+171 files in other folders)
